# shazam-dashboard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.shazam/: shazam.yaml
.shazam/agents/: pm.md  senior_2.md
.shazam/memories/: SKILL.md
.shazam/tasks/: task_143.md
src/: App.vue  BUTTON_DESIGN_SPEC.md  RELEASE_NOTES.md  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: agentService.ts  companyService.ts  configService.ts  eventService.ts  fileService.ts  http.ts  index.ts  memoryService.ts  metricsService.ts  planService.ts  projectService.ts  subagentService.ts  taskService.ts  utils.ts
src/composables/: useActiveCompany.ts  useAgentFilters.ts  useAgentOutput.ts  useAgentStatus.ts  useAgents.ts  useApi.ts  useAsyncState.ts  useCanvas.ts  useConfigForm.ts  useDashboard.ts  useErrorHandler.ts  useEventFeed.ts  useFileBrowser.ts  useHealth.ts  useKeyboardShortcuts.ts  useMemoryTree.ts  useMetrics.ts  useMotion.ts  useNotifications.ts  useOrgChart.ts  useProjects.ts  useRealtimeSync.ts  useSessions.ts  useSidebar.ts  useSpotlight.ts  useTaskActions.ts  useTaskPagination.ts  useToast.ts  useWebSocket.ts  useWorkflowEditor.ts  useWorkspaces.ts
src/constants/: colors.ts  languages.ts  timing.ts
src/dev/: mockApi.ts
src/pages/: AgentOutputPage.vue  AgentsPage.vue  (+13 more)
(+100 files in other folders)
